# ojisan_f-ck

./: Cargo.toml  LICENSE  README.md  Readme.md
.github/workflows/: release.yml  unit_test.yml
examples/: hello_world.of
src/: instractions.rs  instructions.rs  interpreter.rs  lib.rs  main.rs  transpile.rs
