[package]
name = "ojisan_fuck"
version = "0.1.3"
authors = ["ikanago <28985004+ikanago@users.noreply.github.com>"]
edition = "2018"
description = "Brain-fuck interpreter parsing emoji used by Japanese ojisans"
license = "MIT"
repository = "https://github.com/ikanago/ojisan_f-ck"
keywords = ["esolang", "interpreter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
